<resources>
    <string name="app_name">Naat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Live Football</string>
    <string name="check_your_conn">Check Your Connection</string>
    <string name="no_internet">You don\'t seem to have an active internet connection.</string>
    <string name="conn_try_again">Please check your connection and try again.</string>
    <string name="try_again">Try Again</string>
    <string name="exceptionInErrorResponse">Exception in parsing error response.</string>
    <string name="timeout">Request timed out</string>
    <string name="connectException">Unable to connect host</string>
    <string name="invalid_data">Invalid data receied.</string>
    <string name="ssl">SSL cetificate error. Unable to handshake</string>
    <string name="text_somethingwentwrong">Something went wrong. Please try again</string>
    <string name="pleaseWait">Please wait ...</string>
    <string name="yodo1_demo_video">Show Rewarded Video Ad</string>
    <string name="yodo1_demo_interstitial">Show Interstitial Ad</string>
    <string name="yodo1_demo_banner">Show Banner Ad</string>
    <string name="key">lakjfalsjfiosdjl fowi 029u4893rji9pq3fw</string>
    <string name="salt">sd;lfja094rjmo3wf90iewdf</string>
    //ADMOB ID's
    <string name="ADMOB_APP_ID">ca-app-pub-5580537606944457~4465578836</string>
    <!--    <string name="ADMOB_APP_ID">ca-app-pub-2830201261334544~2516166051</string>-->
    <string name="STARTAPP_APP_ID">200468252</string>
    <string name="APPLOVIN_SDK_KEY">U3WzVWmlM4is2Md6zUTzSbFCygBe7812TP5rCB4PaDuXcmhDezTJVIUaPF0UiPnoTvZGTWWOR8DKTL7ytmuc-5</string>
    <!--    <string name="ADMOB_BANNER_ID">ca-app-pub-3489810328478410/935607688</string>-->
    <string name="ADMOB_BANNER_ID">ca-app-pub-3940256099942544/6300978111</string>
    <!--    <string name="ADMOB_INTER_ID">ca-app-pub-3489810328478410/172785340</string>-->
    <string name="ADMOB_INTER_ID">ca-app-pub-3940256099942544/1033173712</string>
    <!--    <string name="ADMOB_INTER_ID">ca-app-pub-2830201261334544/2107018236</string>-->
    <string name="MY_APP_ID">ca-app-pub-7314799413633448~7713870348</string>

    //FACEBOOK ID's
    <string name="FACEBOOK_APP_ID"></string>
    <string name="YODO_APP_KEY">UIsisNnKmx</string>
    <!--    <string name="FACEBOOK_BANNER_ID">1204722533310735_1204722656644056</string>-->
    <string name="FACEBOOK_BANNER_ID">IMG_16_9_APP_INSTALL#YOUR_PLACEMENT_ID</string>
    <!--    <string name="FACEBOOK_INTER_ID">1204722533310735_1204722749977380</string>-->
    <string name="FACEBOOK_INTER_ID">YOUR_PLACEMENT_ID</string>

    //PACKEGE NAME AND YOUTUBE API KEY
    <string name="PACKAGE_NAME">com.imtyaz.quranurdutarjuma</string>
    <!--    <string name="PACKAGE_NAME">com.free.newhdmovies</string>-->
    <string name="TEST_PACKAGE_NAME">test.app.com</string>
    <string name="YOUTUBE_API_KEY">AIzaSyDT77zvdQIeFdZ7GT3xnXWLBgJCXXKw8n0</string>

    <!--   //APP LOVIN-->
    <!--    [1/13, 11:59] umar mushtaq: Banner Ad : aa8acade928dd27f-->
    <!--    [1/13, 12:00] umar mushtaq: Inter Ad : 348a595deb89d223-->
    <string name="APPLOVIN_BANNER_ID">aa8acade928dd27f</string>
    <string name="APPLOVIN_INTER_ID">348a595deb89d223</string>
    <string name="msg_subscribed">subscribed</string>
    <string name="msg_subscribe_failed">subscribe failed</string>
    <string name="DACM_URL">https://www.google.com</string>

    //AdColony
    <string name="ADCOLONY_APP_ID">app6ff0e0a799244a0ebd</string>
    <string name="ADCOLONY_INTER_ZONE_ID">vzdebea15f3c9947c686</string>
    <string name="ADCOLONY_BANNER_ZONE_ID">vze7cec19f349e4460ac</string>


</resources>
