<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_no_wifi_icon"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
       />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_your_conn"
        android:textSize="27sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/image"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/text1"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_internet"
        android:textSize="14sp"
        android:layout_below="@+id/text"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conn_try_again"
        android:textSize="14sp"
        android:layout_below="@+id/text1"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/tryAgain"
        android:layout_marginTop="15dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/try_again"
        android:textSize="20sp"
        android:layout_below="@+id/text2"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:padding="5dp"
        android:textColor="@color/white"
        android:background="@drawable/round_corner"
        />

</RelativeLayout>