<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TestActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <Button
            android:id="@+id/yodo1_demo_video_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/yodo1_demo_video"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/yodo1_demo_interstitial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/yodo1_demo_interstitial"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/yodo1_demo_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/yodo1_demo_banner"
            android:textAllCaps="false" />
        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <!--  <Button
             android:id="@+id/yodo1_applovin_mediation_debugger"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="@string/yodo1_applovin_mediation_debugger"
             android:textAllCaps="false" />

         <Button
             android:id="@+id/yodo1_admob_mediation_test"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="@string/yodo1_admob_mediation_test"
             android:textAllCaps="false" /> -->

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>